# ockero_db

./: Ordlista.csv  Ordlista.xlsx  README.md
ockero_data_ingest/: .gitignore  README.md  config.yml  pyproject.toml
ockero_data_ingest/import_data/Excel/: SchoolSoft EA barn.xlsx  SchoolSoft EA elever.xlsx
ockero_data_ingest/ockero_ingest/: cli.py  config_loader.py  run_pipeline.py
ockero_data_ingest/ockero_ingest/dlt_extract/: dlt_extract_pipeline.py  dlt_utils.py  source_elin.py  source_schoolsoft.py  source_schoolsoft_csv.py  source_ss12000.py
ockero_data_ingest/ockero_ingest/utils/: logger.py
ockero_data_ingest/runs/: ockero-data_ingest_run.cmd
ockero_dbt/: .gitignore  .user.yml  dbt_project.yml
ockero_dbt/macros/: capitlize_upper_text.sql  linked_source.sql  linked_source_2.sql
ockero_dbt/models/1-brons/: _sources.yml  schoolsoft_api_ea_elever.sql  schoolsoft_api_schools.sql  schoolsoft_api_studentgrades.sql  schoolsoft_api_subjects.sql
ockero_dbt/models/1-brons/elin/: elin_export_data.sql  elin_export_data_skolformer.sql
ockero_dbt/models/1-brons/old/: brons_elin_export_data.sql  brons_elin_export_data_skolformer.sql  brons_schoolsoft_ea_barn.sql  brons_schoolsoft_ea_elever.sql  brons_schoolsoft_schools.sql  brons_schoolsoft_studentgrades.sql  brons_schoolsoft_students.sql  brons_schoolsoft_subjects.sql
ockero_dbt/models/2-silver/: elin_elever.sql  schoolsoft_betyg.sql  schoolsoft_elever.sql  schoolsoft_elever_ea.sql  schoolsoft_skola.sql
ockero_dbt/models/3-guld/: d_skola.sql
ockero_dbt/runs/: dbt-run-ockero_db.cmd
(+30 files in other folders)
